--- a/.env.development
+++ b/.env.development
@@ -4,7 +4,10 @@
 VITE_BASE_URL = /
 
 # API 地址前缀
-VITE_API_URL = https://m1.apifoxmock.com/m1/6400575-6097373-default
+VITE_API_URL = /dev-api
+
+# API 代理后端地址
+VITE_PROXY_URL = http://localhost:8080
 
 # Delete console
 VITE_DROP_CONSOLE = false
