--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,13 @@
 # 【生产】环境变量
 
 # 网站地址前缀
-VITE_BASE_URL = /art-design-pro/
+VITE_BASE_URL = /
 
 # API 地址前缀
-VITE_API_URL = https://m1.apifoxmock.com/m1/6400575-6097373-default
+VITE_API_URL = /prod-api
+
+# API 代理后端地址
+VITE_PROXY_URL = /
 
 # Delete console
 VITE_DROP_CONSOLE = true
